erDiagram
    %% Capa Local (SQLite)
    USERS {
        int id PK
        string name
        string email UK
        string password_hash
        string role "admin|usuario|auditor"
        int is_active "1 o 0"
        string created_at
    }

    PROFILES {
        int user_id PK, FK
        string username
        string gmail
        int cycle_duration
        int period_duration
        string profile_image_path
        int notif_periodo
        int notif_ovulacion
        int notif_pildora
        int notif_hidratacion
        int notif_ejercicio
        int notif_app
        int notif_sonidos
        int notif_cita_medica
        int notif_daily_log
        int notif_log_hour
        int notif_log_minute
    }

    DAILY_LOGS {
        int id PK
        int user_id FK
        string date
        int period_start
        int period_end
        string symptoms
        string sexo
        string flujo
        string bleeding_intensity
        string clots
        int spotting
        string spotting_days
        string sexual_symptoms
        float pain_level
        string pain_character
        string pain_days
        string treatment
        string physical_symptoms
        string emotional_symptoms
        string breast_exam
        string notes
        string created_at
    }
    
    AUDIT_LOGS {
        int id PK
        int user_id FK
        string action
        string target_type
        int target_id
        string details
        string ip_address
        string created_at
    }

    PILL_TIMES {
        int id PK
        int user_id FK
        int hour
        int minute
    }

    WEEKLY_APPOINTMENTS {
        int id PK
        int user_id FK
        int weekday
        int hour
        int minute
    }

    %% Capa Backend (FastAPI)
    BACKEND_USERS {
        int id PK
        string name
        string email UK
        string password_hash
        string role "admin|usuario|auditor"
        bool is_active
        datetime created_at
    }

    BACKEND_USER_PROFILES {
        int id PK
        int user_id FK
        int menstrual_cycle_duration
        int menstruation_duration
        string collection_product
        string contraceptive
        int age
        float weight
        string weight_unit
        bool breast_exam_reminder
        bool privacy_policy_accepted
        datetime updated_at
    }

    BACKEND_ADDITIONAL_MEDICATIONS {
        int id PK
        int user_id FK
        string name
        string category
        datetime updated_at
    }

    BACKEND_DAILY_LOGS {
        int id PK
        int user_id FK
        string date
        bool period_start
        bool period_end
        bool sexual_intercourse
        string bleeding_intensity
        string notes
        datetime updated_at
    }
    
    BACKEND_AUDIT_LOGS {
        int id PK
        int user_id FK
        string action
        string target_type
        int target_id
        string details
        string ip_address
        datetime created_at
    }

    %% Relaciones Locales
    USERS ||--|| PROFILES : "1:1 tiene perfil"
    USERS ||--o{ DAILY_LOGS : "1:N registra"
    USERS ||--o{ AUDIT_LOGS : "1:N genera acciones"
    USERS ||--o{ PILL_TIMES : "1:N configura"
    USERS ||--o{ WEEKLY_APPOINTMENTS : "1:N agenda"

    %% Relaciones Backend
    BACKEND_USERS ||--|| BACKEND_USER_PROFILES : "1:1 tiene perfil"
    BACKEND_USERS ||--o{ BACKEND_AUDIT_LOGS : "1:N genera acciones"
    BACKEND_USER_PROFILES ||--o{ BACKEND_ADDITIONAL_MEDICATIONS : "1:N toma"
    BACKEND_USER_PROFILES ||--o{ BACKEND_DAILY_LOGS : "1:N registra"
